# biofrost

./: .gitignore  .readthedocs.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
biofrost/: __init__.py  env.py  logger.py
biofrost/ai/: __init__.py  chat.py  utils.py
biofrost/analysis/: __init__.py  alignment.py  bioinfo.py  clusterProfiler.R  de.py  ontology.py
biofrost/models/: __init__.py  network.py
biofrost/parser/: __init__.py  alignment.py  annotation.py  fast5.py  fastx.py  taxonomy.py
biofrost/plot/: __init__.py  circos.py  tracks.py  utils.py
biofrost/utils/: __init__.py  intervals.py  io.py  iter.py  text.py
docs/source/: biofrost.analysis.alignment.rst  biofrost.analysis.bioinfo.rst  biofrost.analysis.de.rst  biofrost.analysis.models.rst  biofrost.analysis.ontology.rst  biofrost.analysis.rst  biofrost.env.rst  biofrost.logger.rst  biofrost.main.rst  biofrost.models.network.rst  biofrost.models.rst  biofrost.parser.alignment.rst  biofrost.parser.annotation.rst  biofrost.parser.fastx.rst  biofrost.parser.rst  biofrost.parser.taxonomy.rst  biofrost.plot.circos.rst  biofrost.plot.rst  biofrost.plot.utils.rst  biofrost.rst  biofrost.sequence.kmer.rst  biofrost.sequence.rst  biofrost.utils.intervals.rst  biofrost.utils.io.rst  biofrost.utils.iter.rst  biofrost.utils.rst  biofrost.utils.text.rst  biofrost.version.rst  conf.py  index.rst  modules.rst  requirements.txt  sequence.rst
tests/: test_biofrost.py  test_parser.py  test_taxonomy.py  test_utils.py
tests/parser/: chrM.gff3  test.fa  test.fq  test.paf
