[tool.poetry]
name = "biofrost"
version = "0.1.0"
description = "The magic bifrost bridge of bioinformatics."
authors = ["Jinyang Zhang <zhangjinyang@biols.ac.cn>"]
readme = "README.md"
license = "LICENSE"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7"
]
include = [
    "biofrost/analysis/clusterProfiler.R",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pysam = "^0.21.0"
matplotlib-venn = "^0.11.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"